<resources>
    <string name="app_name" translatable="false">WebUI</string>
    <string name="enable_webview_debugging">Inject Eruda</string>
    <string name="please_grant_root">ROOT permission is required. reality is optional, suffering is not</string>
    <string name="no_modules">No WebUI detected in your installed module list</string>
    <string name="loading">Getting things ready …</string>
    <string name="author">By: %s</string>
    <string name="version">Version: %s</string>
    <string name="show_disabled">Show Disabled</string>
    <string name="enable_monet_color">Monet Color</string>
    <string name="start_downloading">Start downloading</string>
    <string name="download_failed">Download failed: %s</string>
    <string name="open">WebUI</string>
    <string name="action">Action</string>
    <string name="donate">Donate</string>
    <string name="support">Support</string>
    <string name="copy_details">Copy details</string>
    <string name="remove">Remove</string>
</resources>
